FLY wire David/force-app/main/default/objects/Activity/fields/Activity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Activity_Outcome__c</fullName>
    <description>When the task or event at hand has been completed but the intended outcome has not been resolved</description>
    <inlineHelpText>When the task or event at hand has been completed but the intended outcome has not been resolved</inlineHelpText>
    <label>Activity Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Revisit Later</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>