FLY wire David/force-app/main/default/objects/Activity/fields/Activity_Source1__c.field-meta.xml
<CustomField>
    <fullName>Activity_Source1__c</fullName>
    <description>Identifies the activity source as Yesware, LinkedIn, or Marketo.</description>
    <formula>IF((ywr__Yesware_TotalCall__c &gt;= 1), &quot;Yesware&quot;,
IF((ywr__Yesware_Meeting__c &gt;= 1), &quot;Yesware&quot;,

IF(BEGINS(Subject,&quot;Message Sent:&quot;), &quot;Yesware&quot;,
IF(BEGINS(Subject,&quot;InMail sent from Sales Navigator&quot;), &quot;LinkedIn&quot;,
IF(BEGINS(Subject,&quot;Message sent from Sales Navigator&quot;), &quot;LinkedIn&quot;,
IF(BEGINS(Subject,&quot;Was Sent Email:&quot;), &quot;Marketo&quot;,
IF(BEGINS(Subject,&quot;Email:&quot;), &quot;Yesware&quot;,
IF(( ywr__Yesware_Sent__c &gt;= 1), &quot;Yesware&quot;,

IF(BEGINS(Subject,&quot;Message Opened:&quot;), &quot;Yesware&quot;,
IF(BEGINS(Subject,&quot;Opened Email:&quot;), &quot;Marketo&quot;,
IF((yw__YeswareOpens__c &gt;= 1), &quot;Yesware&quot;,

IF(BEGINS(Subject,&quot;Reply:&quot;), &quot;Yesware&quot;,
IF((yw__YeswareReplies__c &gt;= 1), &quot;Yesware&quot;,

IF(BEGINS(Subject,&quot;Link Clicked in Message:&quot;), &quot;Yesware&quot;,
IF(BEGINS(Subject,&quot;Smart Link View from Sales Navigator&quot;), &quot;LinkedIn&quot;,
IF(BEGINS(Subject,&quot;Clicked Link in Email:&quot;), &quot;Marketo&quot;,
IF((yw__YeswareLinkClicks__c &gt;= 1), &quot;Yesware&quot;,

IF(BEGINS(Subject,&quot;Attachment Opened in Message:&quot;), &quot;Yesware&quot;,

IF(BEGINS(Subject,&quot;Presentation Viewed in Message:&quot;), &quot;Yesware&quot;,


IF(BEGINS(Subject,&quot;YW Custom&quot;), &quot;Yesware&quot;,
IF(BEGINS(Subject,&quot;Message Sync:&quot;), &quot;Yesware&quot;,

IF(BEGINS(Subject,&quot;Notes from Sales Navigator&quot;), &quot;LinkedIn&quot;,

IF(BEGINS(Subject,&quot;Bounce Received:&quot;), &quot;Yesware&quot;,
IF(BEGINS(Subject,&quot;Unresolved Email:&quot;), &quot;Yesware&quot;,
IF((Subject = &quot;Bounce Received: Delivery Status Notification (Failure)&quot;), &quot;Yesware&quot;,

IF(BEGINS(Subject,&quot;Filled Out Form&quot;), &quot;Marketo&quot;,

&quot;Task&quot;))))))))))))))))))))))))))</formula>
    <label>Activity Source</label>
    <type>Text</type>
</CustomField>