FLY wire David/force-app/main/default/objects/Activity/fields/Activity_Source__c.field-meta.xml
<CustomField>
    <fullName>Activity_Source__c</fullName>
    <description>Returns which object the Activity originated from</description>
    <formula>CASE(
left(WhatId,3),
&quot;001&quot;,&quot;Account&quot;,
&quot;003&quot;,&quot;Contacts&quot;,
&quot;00Q&quot;,&quot;Leads&quot;,
&quot;500&quot;,&quot;Case&quot;,
&quot;006&quot;,&quot;Opportunity&quot;,
&quot;Other&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns which object the Activity originated from</inlineHelpText>
    <label>Activity Object Source</label>
    <type>Text</type>
</CustomField>