FLY wire David/force-app/main/default/objects/Activity/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>For CS tracking, What was covered in the session? Requested SAL-2221</description>
    <inlineHelpText>Select what was covered in the session.</inlineHelpText>
    <label>Content</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Sense Checking</fullName>
            </value>
            <value>
                <fullName>General Catch Up</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
                <label>1:1 Training</label>
            </value>
            <value>
                <fullName>Signposting</fullName>
            </value>
            <value>
                <fullName>Product Review</fullName>
            </value>
            <value>
                <fullName>Support Issue Escalation</fullName>
            </value>
            <value>
                <fullName>General Outreach</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>1:Many Training</fullName>
            </value>
            <value>
                <fullName>Signposting Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>