FLY wire David/force-app/main/default/objects/Activity/fields/Content_Detail__c.field-meta.xml
<CustomField>
    <fullName>Content_Detail__c</fullName>
    <description>For CS to Select the product details covered in the session. Require if &quot;Content&quot; field = Product. SAL-2221
Renamed as per SAL-2512</description>
    <inlineHelpText>Select the product details covered in the session.</inlineHelpText>
    <label>Training Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>xB Payex</fullName>
            </value>
            <value>
                <fullName>xB Dashboard</fullName>
            </value>
            <value>
                <fullName>xB Refunds</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Training: WPM Extranet</fullName>
                <label>WPM Extranet</label>
            </value>
            <value>
                <fullName>Training: WPM RCP</fullName>
                <label>WPM RCP</label>
            </value>
            <value>
                <fullName>Training: WPM OS Foundation (PC)</fullName>
                <label>WPM OS PC</label>
            </value>
            <value>
                <fullName>Training: WPM OS Foundation (SC)</fullName>
                <label>WPM OS SC</label>
            </value>
            <value>
                <fullName>Training: WPM OS Foundation (CE)</fullName>
                <label>WPM OS CE</label>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>Payables</fullName>
            </value>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>China/India</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>RCP</fullName>
            </value>
            <value>
                <fullName>Training: WPM OS Advanced (CE)</fullName>
                <isActive>false</isActive>
                <label>Training: WPM OS Advanced (CE)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>