FLY wire David/force-app/main/default/objects/Activity/fields/Key_Objective__c.field-meta.xml
<CustomField>
    <fullName>Key_Objective__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to denote a task as part of the key objectives which makes it appear on the Account Planning App Account page. https://jira.flywire.tech/projects/SAL/queues/custom/661/SAL-2844</description>
    <inlineHelpText>Denote it is a Key Objective or other Account Planning specific task</inlineHelpText>
    <label>Key Objective</label>
    <type>Checkbox</type>
</CustomField>