FLY wire David/force-app/main/default/objects/Activity/fields/Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile__c</fullName>
    <description>This was used for a Process builder to get last activity. No longer needed, superseded by Flow that looks at CreatedBy</description>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This was used for a Process builder to get last activity. No longer needed, superseded by Flow that looks at CreatedBy</inlineHelpText>
    <label>OBS Owner Profile</label>
    <type>Text</type>
</CustomField>