FLY wire David/force-app/main/default/objects/Activity/fields/OwnerID__c.field-meta.xml
<CustomField>
    <fullName>OwnerID__c</fullName>
    <description>Captures the ID of the user who creates the Activity</description>
    <formula>CreatedBy.User_LongID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerID</label>
    <type>Text</type>
</CustomField>