FLY wire David/force-app/main/default/objects/Activity/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>SAL-3760</description>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>🔴</fullName>
            </value>
            <value>
                <fullName>🟡</fullName>
            </value>
            <value>
                <fullName>🟢</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>