FLY wire David/force-app/main/default/objects/Activity/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <description>For CS use, Select Products the engagement relates to. SAL-2221</description>
    <inlineHelpText>Select Products the engagement relates to.</inlineHelpText>
    <label>Related Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WPM RCP</fullName>
            </value>
            <value>
                <fullName>WPM OS</fullName>
            </value>
            <value>
                <fullName>WPM Extranet</fullName>
            </value>
            <value>
                <fullName>xB Payex / Dashboard</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>Payables</fullName>
            </value>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>RCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>