FLY wire David/force-app/main/default/objects/Activity/fields/Task_Wire_Processor__c.field-meta.xml
<CustomField>
    <fullName>Task_Wire_Processor__c</fullName>
    <label>Task Wire Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wire_Processor</valueSetName>
    </valueSet>
</CustomField>