FLY wire David/force-app/main/default/objects/Activity/fields/Unique_Activity__c.field-meta.xml
<CustomField>
    <fullName>Unique_Activity__c</fullName>
    <description>For reporting</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting</inlineHelpText>
    <label>Unique Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>