FLY wire David/force-app/main/default/objects/Activity/fields/WPM_Type__c.field-meta.xml
<CustomField>
    <fullName>WPM_Type__c</fullName>
    <description>WPM Hubspot field used to distinguish the activity type in Hubspot.</description>
    <inlineHelpText>WPM Hubspot field used to distinguish the activity type in Hubspot.</inlineHelpText>
    <label>WPM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Competition Tracking</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>In-Person Meeting</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Marketing Email</fullName>
            </value>
            <value>
                <fullName>Marketing Email Clicked</fullName>
            </value>
            <value>
                <fullName>Marketing Email Opened</fullName>
            </value>
            <value>
                <fullName>Marketing Email Sent</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Meeting Scheduled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales Call Made</fullName>
            </value>
            <value>
                <fullName>Sales Content Viewed</fullName>
            </value>
            <value>
                <fullName>Sales Email</fullName>
            </value>
            <value>
                <fullName>Sales Email Clicked</fullName>
            </value>
            <value>
                <fullName>Sales Email Opened</fullName>
            </value>
            <value>
                <fullName>Sales Email Sent</fullName>
            </value>
            <value>
                <fullName>Task Created</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
            <value>
                <fullName>Virtual Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>