FLY wire David/force-app/main/default/objects/Activity/fields/yw__SyncedFromYesware__c.field-meta.xml
<CustomField>
    <fullName>yw__SyncedFromYesware__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this activity was automatically synced to Salesforce from Yesware.</description>
    <inlineHelpText>Yesware will automatically update this field when creating or updating an activity. This field captures whether Yesware was used to automatically sync this activity.</inlineHelpText>
    <label>Synced From Yesware</label>
    <type>Checkbox</type>
</CustomField>