FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareAttachmentOpens__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareAttachmentOpens__c</fullName>
    <description>The total number of times attachments in this specific Yesware sent email were opened.</description>
    <inlineHelpText>Yesware will automatically update this field every time an attachment is opened in the Yesware sent email represented by this Task. This field counts the total number of attachment opens, only for Yesware tracked attachments.</inlineHelpText>
    <label>Yesware Attachment Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>