FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareBounces__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareBounces__c</fullName>
    <description>The total number of times a bounce response was received back for this specific Yesware sent email.</description>
    <inlineHelpText>Yesware will automatically update this field every time a bounce is received in response to the Yesware sent email represented by this Task. This field counts the total number of bounces received.</inlineHelpText>
    <label>Yesware Bounces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>