FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareFirstAttachmentOpenAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareFirstAttachmentOpenAt__c</fullName>
    <description>The date/time that an attachment in this specific Yesware sent email was first opened. Only counts opens for Yesware tracked attachments.</description>
    <inlineHelpText>Yesware will automatically update this field the first time an attachment is opened in the Yesware sent email represented by this Task. This field captures the date/time of the first attachment open, only for Yesware tracked attachments.</inlineHelpText>
    <label>Yesware First Attachment Open At</label>
    <type>DateTime</type>
</CustomField>