FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareFirstBounceAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareFirstBounceAt__c</fullName>
    <description>The date/time of the first bounce response that was received back for this specific Yesware sent email.</description>
    <inlineHelpText>Yesware will automatically update this field the first time a bounce is received in response to the Yesware sent email represented by this Task. This field captures the date/time of the first bounce received.</inlineHelpText>
    <label>Yesware First Bounce At</label>
    <type>DateTime</type>
</CustomField>