FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareFirstLinkClickAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareFirstLinkClickAt__c</fullName>
    <description>The date/time that a link in this specific Yesware sent email was first clicked. Only counts clicks if Yesware link tracking was enabled when the message was sent.</description>
    <inlineHelpText>Yesware will automatically update this field the first time a link click is registered for the Yesware sent email represented by this Task. This field captures the date/time of the first link click, only if Yesware link tracking was enabled.</inlineHelpText>
    <label>Yesware First Link Click At</label>
    <type>DateTime</type>
</CustomField>