FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareFirstOpenAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareFirstOpenAt__c</fullName>
    <description>The date/time this specific Yesware sent email was first opened.</description>
    <inlineHelpText>Yesware will automatically update this field the first time an open is registered for the Yesware sent email represented by this Task. This field captures the date/time of the first open, only if Yesware tracking was enabled when the message was sent.</inlineHelpText>
    <label>Yesware First Open At</label>
    <type>DateTime</type>
</CustomField>