FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareFirstPresentationViewAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareFirstPresentationViewAt__c</fullName>
    <description>The date/time that a presentation in this specific Yesware sent email was first viewed. Only counts opens for Yesware tracked presentations.</description>
    <inlineHelpText>Yesware will automatically update this field the first time a presentation is viewed in the Yesware sent email represented by this Task. This field captures the date/time of the first presentation view, only for Yesware tracked presentations.</inlineHelpText>
    <label>Yesware First Presentation View At</label>
    <type>DateTime</type>
</CustomField>