FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareFirstReplyAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareFirstReplyAt__c</fullName>
    <description>The date/time of the first reply received in direct response to this Yesware sent email.</description>
    <inlineHelpText>Yesware will automatically update this field the first time a reply is received for the Yesware sent email represented by this Task. This field captures the date/time of the first reply received.</inlineHelpText>
    <label>Yesware First Reply At</label>
    <type>DateTime</type>
</CustomField>