FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareLastAttachmentOpenAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareLastAttachmentOpenAt__c</fullName>
    <description>The date/time that an attachment in this specific Yesware sent email was most recently opened. Only counts opens for Yesware tracked attachments.</description>
    <inlineHelpText>Yesware will automatically update this field every time an attachment is opened in the Yesware sent email represented by this Task. This field captures the date/time of the most recent attachment open, only for Yesware tracked attachments.</inlineHelpText>
    <label>Yesware Last Attachment Open At</label>
    <type>DateTime</type>
</CustomField>