FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareLastBounceAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareLastBounceAt__c</fullName>
    <description>The date/time of the most recent bounce response that was received back for this specific Yesware sent email.</description>
    <inlineHelpText>Yesware will automatically update this field every time a bounce is received in response to the Yesware sent email represented by this Task. This field captures the date/time of the most recent bounce received.</inlineHelpText>
    <label>Yesware Last Bounce At</label>
    <type>DateTime</type>
</CustomField>