FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareLastLinkClickAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareLastLinkClickAt__c</fullName>
    <description>The date/time that a link in this specific Yesware sent email was most recently clicked. Only counts clicks if Yesware link tracking was enabled when the message was sent.</description>
    <inlineHelpText>Yesware will automatically update this field every time a link click is registered for the Yesware sent email represented by this Task. This field captures the date/time of the most recent link click, only if Yesware link tracking was enabled.</inlineHelpText>
    <label>Yesware Last Link Click At</label>
    <type>DateTime</type>
</CustomField>