FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareLastOpenAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareLastOpenAt__c</fullName>
    <description>The date/time this specific Yesware sent email was most recently opened.</description>
    <inlineHelpText>Yesware will automatically update this field every time an open is registered for the Yesware sent email represented by this Task. This field captures the date/time of the most recent open, only if Yesware tracking was enabled when the message was sent.</inlineHelpText>
    <label>Yesware Last Open At</label>
    <type>DateTime</type>
</CustomField>