FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareLastPresentationViewAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareLastPresentationViewAt__c</fullName>
    <description>The date/time that a presentation in this specific Yesware sent email was most recently viewed. Only counts opens for Yesware tracked presentations.</description>
    <inlineHelpText>Yesware will automatically update this field every time a presentation is viewed in the Yesware sent email represented by this Task. This field captures the date/time of the most recent presentation view, only for Yesware tracked presentations.</inlineHelpText>
    <label>Yesware Last Presentation View At</label>
    <type>DateTime</type>
</CustomField>