FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareLastReplyAt__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareLastReplyAt__c</fullName>
    <description>The date/time of the most recent reply received in direct response to this Yesware sent email.</description>
    <inlineHelpText>Yesware will automatically update this field every time a reply is received for the Yesware sent email represented by this Task. This field captures the date/time of the most recent reply received.</inlineHelpText>
    <label>Yesware Last Reply At</label>
    <type>DateTime</type>
</CustomField>