FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareLinkClicks__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareLinkClicks__c</fullName>
    <description>The total number of times links in this specific Yesware sent email were clicked.</description>
    <inlineHelpText>Yesware will automatically update this field every time a link click is registered for the Yesware sent email represented by this Task. This field counts the total number of link clicks, only if Yesware link tracking was enabled.</inlineHelpText>
    <label>Yesware Link Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>