FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareOpens__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareOpens__c</fullName>
    <description>The total number of times this specific Yesware sent email was opened.</description>
    <inlineHelpText>Yesware will automatically update this field every time an open is registered for the Yesware sent email represented by this Task. This field counts the total number of opens only for Yesware tracked emails.</inlineHelpText>
    <label>Yesware Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>