FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswarePresentationViews__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswarePresentationViews__c</fullName>
    <description>The total number of times presentations in this specific Yesware sent email were viewed.</description>
    <inlineHelpText>Yesware will automatically update this field every time a presentation is viewed in the Yesware sent email represented by this Task. This field counts the total number presentation views only for Yesware tracked presentations.</inlineHelpText>
    <label>Yesware Presentation Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>