FLY wire David/force-app/main/default/objects/Activity/fields/yw__YeswareReplies__c.field-meta.xml
<CustomField>
    <fullName>yw__YeswareReplies__c</fullName>
    <description>The total number of replies received in direct response to this Yesware sent email.</description>
    <inlineHelpText>Yesware will automatically update this field every time a reply is received for the Yesware sent email represented by this Task. This field counts the total number of replies received in direct response to this Yesware sent email.</inlineHelpText>
    <label>Yesware Replies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>