FLY wire David/force-app/main/default/objects/Activity/fields/ywr__Automated_vs_Manual__c.field-meta.xml
<CustomField>
    <fullName>ywr__Automated_vs_Manual__c</fullName>
    <formula>IF( ywr__YeswareCampaignTouchType__c = &quot;automated_email&quot; , &quot;Automated&quot;, &quot;Manual&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automated vs. Manual</label>
    <type>Text</type>
</CustomField>