FLY wire David/force-app/main/default/objects/Activity/fields/ywr__Opened_Vs_Bounced__c.field-meta.xml
<CustomField>
    <fullName>ywr__Opened_Vs_Bounced__c</fullName>
    <formula>IF( CONTAINS( Subject , &quot;Bounce Received&quot;), &quot;Bounced&quot;, &quot;Opened&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opened Vs. Bounced</label>
    <type>Text</type>
</CustomField>