FLY wire David/force-app/main/default/objects/Activity/fields/ywr__Templated_vs_Non_Templated__c.field-meta.xml
<CustomField>
    <fullName>ywr__Templated_vs_Non_Templated__c</fullName>
    <formula>IF(  ywr__Yesware_Template__c = TRUE, &quot;Templated&quot;, &quot;Non-Templated&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Templated vs Non-Templated</label>
    <type>Text</type>
</CustomField>